[package]
name = "mandalorian"
version = "0.0.1"
authors = ["alvatar"]
edition = "2018"
license = "Apache-2.0"
description = "Simple amm contact"
repository = "https://github.com/alvatar/mandalorian"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw-utils = "0.13.2"
cw2 = "0.13.2"
cw20 = "0.13.2"
cosmwasm-std = "1.0.0"
cw-storage-plus = "0.13.2"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
hex = "0.4"
sha2 = { version = "0.9.9", default-features = false }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
serde_json = "1.0"
cosmwasm-vm = "1.0.0"
